@@ -9,7 +9,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Component
@@ -22,7 +21,7 @@ class TravelPersonAllFieldValidator {
         return persons.stream()
                 .map(this::collectEachPersonErrors)
                 .flatMap(List::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<ValidationErrorDTO> collectEachPersonErrors(PersonDTO person) {
@@ -36,7 +35,7 @@ class TravelPersonAllFieldValidator {
                 .map(validation -> validation.validateSingle(person))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<ValidationErrorDTO> collectListPersonErrors(PersonDTO person) {
@@ -44,13 +43,13 @@ class TravelPersonAllFieldValidator {
                 .map(validation -> validation.validateList(person))
                 .filter((Objects::nonNull))
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<ValidationErrorDTO> concatenateLists(List<ValidationErrorDTO> errorsListOne,
                                                       List<ValidationErrorDTO> errorListTwo) {
         return Stream.concat(errorsListOne.stream(), errorListTwo.stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
